fix for binary in mongo media, fixes, added handling for statistics when working with pig